# django-otel

./: .gitignore  README.md  pyproject.toml
src/django_otel/: logger.py
tests/: settings.py  test_conf.py  test_middleware.py
